# aneb-sim

./: .gitattributes  .gitignore  .gitmodules  BOOTSTRAP.md  CMakeLists.txt  README.md  claude_Reference.md
.github/workflows/: ci.yml
aneb-sim/: CMakeLists.txt
aneb-sim/src/: chip.c  chip.h  cmd.c  cmd.h  main.c  optiboot_data.h.in  pin_names.c  pin_names.h  proto.c  proto.h  script.c  script.h  sim_loop.c  sim_loop.h  uart_server.c  uart_server.h
aneb-sim/src/can_bus/: can_bus.c  can_bus.h
aneb-sim/src/i2c_lcd/: i2c_lcd.c  i2c_lcd.h
aneb-sim/src/mcp2515/: mcp2515.c  mcp2515.h  mcp2515_regs.h
aneb-sim/test/: test.h  test_can_bus.c  test_helpers.h  test_i2c_lcd.c  test_main.c  test_mcp2515_errors.c  test_mcp2515_filters.c  test_mcp2515_loopback.c  test_mcp2515_regs.c  test_mcp2515_spi.c  test_pin_names.c
aneb-ui/: README.md  pyproject.toml
aneb-ui/aneb_ui/: __init__.py  __main__.py  app.py  app_qml.py  com_helpers.py  plot_buffers.py  qml_bridge.py  sim_proxy.py  state.py  uart_bridge.py
aneb-ui/aneb_ui/qml/: ArduinoNano.qml  AvrdudeWindow.qml  Board.qml  BuzzerWidget.qml  CanIndicator.qml  CanInject.qml  CanMonitor.qml  Dashboard.qml  DashboardWindow.qml  EcuPanel.qml  LcdWidget.qml  Led.qml  Mcu.qml  PaneButton.qml  PaneCheckBox.qml  PaneHeader.qml  PaneTextField.qml  Plotter.qml  PlotterWindow.qml  PushButton.qml  SerialConsole.qml  SerialConsoleWindow.qml  StatusDot.qml  Theme.js  TrimPot.qml  qmldir
aneb-ui/aneb_ui/qml_assets/: arduino-coords.json  process_assets.py
aneb-ui/aneb_ui/widgets/: __init__.py  button_widget.py  can_inject.py  can_monitor.py  ecu_panel.py  led_widget.py  mcu_panel.py  nano_widget.py  pot_widget.py  serial_console.py
aneb-ui/tests/: test_plot_buffers.py
demos/: README.md  busoff_recovery.jsonl  multi_node_arbitration.jsonl  tec_climb.jsonl
docs/: ARCHITECTURE.md  DESIGN.md  GEMINI_PROMPT.md  GEMINI_PROMPT_NANO_SVG.md  GEMINI_PROMPT_NANO_SVG_V2.md  GEMINI_PROMPT_NANO_SVG_V3.md  MCP2515_MODEL.md  NANO_BANANA_PROMPTS.md  PLAN.md  PROTOCOL.md
docs/manual/: manual.tex
firmware/examples/: README.md  build_all.sh  can_heartbeat_ecu1.hex  can_heartbeat_ecu2.hex  can_heartbeat_ecu3.hex  can_heartbeat_ecu4.hex  io_test.hex
firmware/examples/adc_to_pwm/: adc_to_pwm.ino
firmware/examples/button_counter/: button_counter.ino
firmware/examples/buzzer_tone/: buzzer_tone.ino
firmware/examples/can_busoff_demo/: can_busoff_demo.ino
firmware/examples/can_heartbeat/: .gitignore  README.md  build_all.sh  can_heartbeat.ino
firmware/examples/io_test/: io_test.ino
firmware/examples/kitchen_sink/: kitchen_sink.ino
firmware/examples/lcd_hello/: README.md  lcd_hello.ino
firmware/examples/ldr_loop/: ldr_loop.ino
firmware/examples/loop_feedback/: loop_feedback.ino
firmware/examples/mcu_mode_select/: mcu_mode_select.ino
firmware/examples/serial_echo/: serial_echo.ino
scripts/: bootstrap.sh  build.sh  calibrate-nano.py  make_screenshots.py  remove_com.bat  run-ui.sh  run.sh  setup_com.bat  setup_com.ps1
scripts/com0com_signed/: README.md
scripts/screenshots/: README.md  faux_bridge.py  snap.py
scripts/screenshots/scenes/: avrdude_demo.qml  serial_demo.qml
tests/: m1_smoke.py  m3_can_smoke.py  m4_busoff_smoke.py  m5_io_smoke.py
